# FEUP-EDAA

./: .gitattributes  .gitignore  README.md
src/: .gitignore  docker-compose.yml
src/Data Preparation/: data_visualization.py
src/KdTree/: .env.example  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  KdTree.cpp  KdTree.h  KdTree.hpp  KdTreeNode.cpp  KdTreeNode.h  KdTree_build_time_complexity_results.txt  KdTree_other_sample_size_results.txt  KdTree_range_results.txt  KdTree_results.txt  Linux.Makefile  Makefile  Song.cpp  Song.h  cmake_install.cmake  grep_time_patterns.lf  main  main.cpp  out  range_search_test_input.lf  standard_test_input.lf  test_script.sh  utils.cpp  utils.h
src/KdTree/build-pqxx/: Makefile  cmake_install.cmake  libpqxx-targets.cmake
src/KdTree/build-pqxx/include/: Makefile  cmake_install.cmake
src/KdTree/build-pqxx/src/: Makefile  cmake_install.cmake
src/KdTree/build-pqxx/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/data_handling/: KdTree_range_results.csv  KdTree_range_results.txt  KdTree_results.csv  benchmarking.py  data_visualization.py
src/data_visualization/: KdTree_build_time_complexity_results.csv  KdTree_other_sample_size_results.csv  KdTree_results.csv  benchmarking.py
src/docker_images/: Dockerfile  begin-transaction.sql  create-tracks-table-and-end-transaction.sql  create_postgres_sql_file.sh  end-transaction.sql  schema.sql
